@@ -7,16 +7,21 @@ import com.example.LMS.builder.review.ReviewResponseBuilder;
 import com.example.LMS.dto.book.BookCreateRequestDto;
 import com.example.LMS.dto.book.BookCreateResponseDto;
 import com.example.LMS.dto.book.BookResponseDto;
-import com.example.LMS.dto.book.BookUnitResponseDto;
 import com.example.LMS.dto.bookCopy.BookCopyResponseDto;
 import com.example.LMS.dto.review.ReviewResponseDto;
 import com.example.LMS.entity.Author;
 import com.example.LMS.entity.Book;
+import com.example.LMS.entity.BookCopy;
 import com.example.LMS.entity.Review;
 import com.example.LMS.exception.NoContentToDeleteException;
 import com.example.LMS.exception.ResourceNotFoundException;
 import com.example.LMS.repository.AuthorRepository;
+import com.example.LMS.repository.BookCopyRepository;
 import com.example.LMS.repository.BookRepository;
+import com.example.LMS.repository.ReviewRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -32,13 +37,17 @@ public class BookService {
 
     private final BookRepository bookRepository;
     private final AuthorRepository authorRepository;
+    private final ReviewRepository reviewRepository;
+    private final BookCopyRepository bookCopyRepository;
 
-    public BookService(BookRepository bookRepository, AuthorRepository authorRepository) {
+    public BookService(BookRepository bookRepository, AuthorRepository authorRepository, ReviewRepository reviewRepository, BookCopyRepository bookCopyRepository) {
         this.bookRepository = bookRepository;
         this.authorRepository = authorRepository;
+        this.reviewRepository = reviewRepository;
+        this.bookCopyRepository = bookCopyRepository;
     }
 
-    public BookCreateResponseDto createBook(BookCreateRequestDto requestDto){
+    public BookCreateResponseDto createBook(BookCreateRequestDto requestDto) {
         Author author = getAuthor(requestDto.getAuthorId());
         Book book = new Book();
         book.setBookName(requestDto.getBookName());
@@ -49,77 +58,67 @@ public class BookService {
         return BookCreateResponseBuilder.buildBookCreateResponseDto(savedBook);
     }
 
-    public List<BookResponseDto> getAllBooks(){
-        return bookRepository.findAll()
-                .stream()
-                .map((Book book) -> BookResponseBuilder.buildBookResponseDto(book,
-                        calculateRate(book)))
-                .collect(Collectors.toList());
+    public List<BookResponseDto> getAllBooks(Integer page, Integer size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Book> bookPage = bookRepository.findAll(pageable);
+        if (bookPage.hasContent()) {
+            return bookPage.getContent().stream()
+                    .map(book ->
+                            BookResponseBuilder.buildBookResponseDto(book, calculateRate(book)))
+                    .collect(Collectors.toList());
+        } else return new ArrayList<>();
     }
 
-    public BookUnitResponseDto getBookById(Long bookId){
+    public BookResponseDto getBookById(Long bookId) {
         Book book = getBook(bookId);
-        BookUnitResponseDto responseDto = new BookUnitResponseDto();
-        responseDto.setBookName(book.getBookName());
-        responseDto.setAuthorName(book.getAuthor().getAuthorName());
-        responseDto.setAuthorId(book.getAuthor().getId());
-        OptionalDouble rate = calculateRate(book);
-        if (rate.isPresent()){
-            responseDto.setRate(rate.getAsDouble());
-        }else {
-            responseDto.setRate(null);
-        }
-        responseDto.setReviewList(book
-                .getReviewList()
-                .stream()
-                .map(ReviewResponseBuilder::buildReviewResponseDto)
-                .collect(Collectors.toList()));
-        return responseDto;
+        return BookResponseBuilder.buildBookResponseDto(book, calculateRate(book));
     }
 
-    public List<ReviewResponseDto> getReviewListByBookId(Long bookId){
-        Book book = getBook(bookId);
-        return book
-                .getReviewList()
-                .stream()
-                .map(ReviewResponseBuilder::buildReviewResponseDto)
-                .collect(Collectors.toList());
+    public List<ReviewResponseDto> getReviewListByBookId(Long bookId, Integer page, Integer size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Review> reviewPage = reviewRepository.findByBook_Id(bookId, pageable);
+        if (reviewPage.hasContent()) {
+            return reviewPage.getContent().stream()
+                    .map(ReviewResponseBuilder::buildReviewResponseDto)
+                    .toList();
+        } else return new ArrayList<>();
     }
 
-    public List<BookCopyResponseDto> getBookCopyByBookId(Long bookId){
-        Book book = getBook(bookId);
-        return book
-                .getBookCopyList()
-                .stream()
-                .map(BookCopyResponseBuilder::buildBookCopyResponseDto)
-                .collect(Collectors.toList());
+    public List<BookCopyResponseDto> getBookCopyByBookId(Long bookId, Integer page, Integer size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<BookCopy> bookCopyPage = bookCopyRepository.findByBook_Id(bookId, pageable);
+        if (bookCopyPage.hasContent()) {
+            return bookCopyPage.getContent().stream()
+                    .map(BookCopyResponseBuilder::buildBookCopyResponseDto)
+                    .toList();
+        } else return new ArrayList<>();
     }
 
-    public void deleteBook(Long bookId){
+    public void deleteBook(Long bookId) {
         Optional<Book> optionalBook = bookRepository.findById(bookId);
-        if (optionalBook.isEmpty()){
+        if (optionalBook.isEmpty()) {
             throw new NoContentToDeleteException("Book not found to delete");
         }
         bookRepository.delete(optionalBook.get());
     }
 
-    public OptionalDouble calculateRate(Book book){
+    public OptionalDouble calculateRate(Book book) {
         return book.getReviewList().stream()
                 .mapToDouble(Review::getRate)
                 .average();
     }
 
-    private Author getAuthor(Long authorId){
+    private Author getAuthor(Long authorId) {
         Optional<Author> optionalAuthor = authorRepository.findById(authorId);
-        if (optionalAuthor.isEmpty()){
+        if (optionalAuthor.isEmpty()) {
             throw new ResourceNotFoundException("Author not found");
         }
         return optionalAuthor.get();
     }
 
-    private Book getBook(Long bookId){
+    private Book getBook(Long bookId) {
         Optional<Book> optionalBook = bookRepository.findById(bookId);
-        if (optionalBook.isEmpty()){
+        if (optionalBook.isEmpty()) {
             throw new ResourceNotFoundException("Book not found");
         }
         return optionalBook.get();
